fixed footer spacing for mobile & null in project article fixed

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -414,7 +414,6 @@
 
  .carousel.vertical {
   height: 300px;
-  margin-top: 40px;
   margin-bottom: 40px;
 }
 
