--- a/templates/news-article/news-article.css
+++ b/templates/news-article/news-article.css
@@ -78,7 +78,9 @@ body.news-article main .section.articlecontent-container + div {
 }
 
 body.news-article main .section.articlecontent-container + div div.default-content-wrapper {
-    float: right;
+    max-width: 1440px;
+    margin: auto;
+    box-sizing: border-box;
     padding: 0 20px;
 }
 
@@ -86,6 +88,8 @@ body.news-article main .section.articlecontent-container + div div.default-conte
     line-height: 1.5em;
     letter-spacing: .04em;
     font-size: 14px;
+    width: 100%;
+    float: left;
 }
 
 body.news-article main .section.articlecontent-container + div div.default-content-wrapper > p > strong {
@@ -330,11 +334,6 @@ body.news-article main .section.details-sidebar.right .news-article-inner .defau
         margin: 0 0 50px;
     }
 
-    body.news-article main .section.articlecontent-container + div div.default-content-wrapper {
-        width: calc(100% - 280px);
-        box-sizing: border-box;
-    }
-
     body.news-article main .section.articlecontent-container + div div.image-wrapper {
         padding-top: 15px;
         margin-bottom: 0;
@@ -357,12 +356,13 @@ body.news-article main .section.details-sidebar.right .news-article-inner .defau
     }
 
     body.news-article main .section.articlecontent-container + div div.default-content-wrapper {
-        padding-right: 200px;
-        width: calc(100% - 380px);
+        padding: 0 80px;
     }
 
     body.news-article main .section.articlecontent-container + div div.default-content-wrapper > p {
         font-size: 20px;
+        width: calc(100% - 380px);
+        float: right;
     }
 
     body.news-article main .section.details-sidebar .news-article-sidebar {
@@ -383,11 +383,6 @@ body.news-article main .section.details-sidebar.right .news-article-inner .defau
 
     body.news-article main .section.articlecontent-container + div {
         margin: 0 0 140px;
-    }
-
-    body.news-article main .section.articlecontent-container + div div.default-content-wrapper {
-        max-width: 900px;
-        box-sizing: unset;
     }
 
     body.news-article main .section.articlecontent-container + div div.image-wrapper {
